# MAI-OOP-LW4

./: .gitignore  CMakeLists.txt  README.md
include/: Array.h  Figure.h  Point.h  Polygon.h  Rectangle.h  Rhombus.h  Trapezoid.h
src/: main.cpp
test/: tests.cpp
